Explicitly set z-index on .global-alert, fix overlap from .uk-active.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,6 +118,7 @@ q, blockquote {
   background: rgba(255, 32, 32, .66);
   color: #fff;
   text-align: center;
+  z-index: 1;
 }
 
 .global-notify {
